# objecting-machine

./: MANIFEST.in  README.md  pyproject.toml
src/machine_name/: __init__.py  cli.py  machina.yaml  machine.py
src/objecting_machine/: cli.py  config.py  machina.yaml  machine.py
